--- a/src/Styles/styles1.css
+++ b/src/Styles/styles1.css
@@ -38,7 +38,7 @@ margin: 0;
     line-height: 17px;
     color: #000;
     background-color: #fff;
-    /* border: 4px solid #000; */
+
     border-radius: 16px;
     padding: 10px 20px;
    /* margin: 15px auto; */
@@ -359,8 +359,8 @@ margin: 0;
     }
 
     .header {
-        padding: 60px;
-        padding-right: 80px;
+        padding: 60px 50px;
+        padding-right: 50px;
         display: flex;
         justify-content: space-between;
       
@@ -370,7 +370,7 @@ margin: 0;
     
     .cover__title {
         margin-bottom: 20px;
-        font-size: 70px;
+        font-size: 50px;
         color: #eee;
     }
 
@@ -393,8 +393,8 @@ margin: 0;
 
     .cover__photo {
         display: block;
-        width: 250px;
-        height: 300px;
+        width: 200px;
+        height: 250px;
         border-radius: 50%;
 
     }
